Cycles: oneAPI: on Windows, embree on GPU may crash when rendering duration exceeds 3 minutes #109282

Closed
opened 2023-06-23 12:02:34 +02:00 by Xavier Hallade · 2 comments
Member

System Information
Operating system: Windows
Graphics card: Intel Arc

Blender Version
Broken: 3.6 and 4.0

Short description of error

With latest drivers on Windows, up to at least 101.4502, rendering scenes using Embree on GPU for more than 3 minutes may lead to a crash happening right after rendering is done, during the call to rtcReleaseScene() ddd88c00b4/intern/cycles/bvh/embree.cpp (L111)
with a message "Abort was called at 27 line in file:" in the logs.

Windows Event logs show the crash happened in ze_intel_gpu64.dll

This is being worked on by the Intel driver team at the moment, I'll update this issue as soon I can share information on an upcoming driver update with the fix.

**System Information** Operating system: Windows Graphics card: Intel Arc **Blender Version** Broken: 3.6 and 4.0 **Short description of error** With latest drivers on Windows, up to at least 101.4502, rendering scenes using Embree on GPU for more than 3 minutes may lead to a crash happening right after rendering is done, during the call to rtcReleaseScene() https://github.com/blender/blender/blob/ddd88c00b456027a2fe5fff82a5fe48964333470/intern/cycles/bvh/embree.cpp#L111 with a message "Abort was called at 27 line in file:" in the logs. Windows Event logs show the crash happened in ze_intel_gpu64.dll This is being worked on by the Intel driver team at the moment, I'll update this issue as soon I can share information on an upcoming driver update with the fix.
Xavier Hallade added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-23 12:02:35 +02:00
Xavier Hallade self-assigned this 2023-06-23 12:02:46 +02:00
Xavier Hallade added this to the Render & Cycles project 2023-06-23 12:02:50 +02:00
Xavier Hallade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-23 12:03:07 +02:00
Xavier Hallade added this to the 3.6 LTS milestone 2023-06-23 12:03:14 +02:00
Xavier Hallade modified the milestone from 3.6 LTS to 4.0 2023-06-23 12:03:18 +02:00
Xavier Hallade modified the milestone from 4.0 to 3.6 LTS 2023-06-23 12:03:22 +02:00
Xavier Hallade modified the milestone from 3.6 LTS to 4.0 2023-06-23 12:04:11 +02:00
Iliya Katueshenock added the
Module
Render & Cycles
label 2023-06-23 12:28:39 +02:00
Author
Member

The fix is done and is part of an upcoming driver release (101.46xx), it'll take a few more weeks before it becomes available on intel.com.

The fix is done and is part of an upcoming driver release (101.46xx), it'll take a few more weeks before it becomes available on intel.com.
Author
Member

The graphics driver with the fix, 101.4644, is now available here: https://www.intel.com/content/www/us/en/download/726609/intel-arc-iris-xe-graphics-whql-windows.html

The graphics driver with the fix, 101.4644, is now available here: https://www.intel.com/content/www/us/en/download/726609/intel-arc-iris-xe-graphics-whql-windows.html
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-16 09:58:02 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109282
No description provided.