Cycles: oneAPI: increase windows min driver requirement to 101.4644

101.4644 has been released 2023-08-15 and fixes the Windows specific
issue #109282.

Pull Request: https://projects.blender.org/blender/blender/pulls/112290